--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@material/typography": "^9.0.0",
     "@speechly/react-client": "0.0.4",
     "@speechly/react-ui": "^1.1.0",
     "@testing-library/jest-dom": "^5.11.4",
